--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,15 +21,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: main
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "yarn"
 
-      - run: yarn
-      - run: yarn format:check
+      - run: yarn install
       - run: yarn test
 
   js-formatting:
@@ -42,8 +43,8 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: "16.x"
+          cache: "yarn"
 
-      - run: yarn
+      - run: yarn install
       - run: yarn format:check
