--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -17,8 +17,9 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'yarn'
 
-      - run: yarn
+      - run: yarn install
       - run: yarn test
       - run: node .github/auto-publish-action.js
         env:
