--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,30 +21,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: main
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+          cache: 'yarn'
 
       - run: yarn install
       - run: yarn test
-
-  js-formatting:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: main
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16.x"
-          cache: "yarn"
-
-      - run: yarn install
-      - run: yarn format:check
