--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   "engines": {
     "node": "~10 >=10.20 || >=12.17"
   },
+  "files": [
+    "nbs.js",
+    "nbs.d.ts",
+    "src",
+    "binding.gyp"
+  ],
   "scripts": {
     "build": "node-gyp configure && node-gyp build",
     "test": "node tests/test.js",
