--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   "gypfile": true,
   "devDependencies": {
     "prettier": "^2.5.1",
-    "uvu": "^0.5.3",
-    "tmp": "^0.2.1"
+    "uvu": "^0.5.3"
   },
   "dependencies": {
     "bindings": "^1.5.0",
