--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "nbsdecoder.js",
   "types": "nbsdecoder.d.ts",
   "engines": {
-    "node": "~10 >=10.20 || >=12.17"
+    "node": ">=14.14.0"
   },
   "files": [
     "nbsdecoder.js",
