--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        node-version: [14.x, 16.x, 18.x, 20.x]
+        node-version: [18.x, 20.x, 21.x]
 
     steps:
       - name: Checkout Code
@@ -39,7 +39,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install node-gyp
-        run: npm install -g node-gyp
+        run: npm install -g node-gyp@10.0.1
 
       - name: Install dependencies
         run: yarn
