More clang-format fixes

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -33,6 +33,6 @@ jobs:
         uses: DoozyX/clang-format-lint-action@v0.13
         with:
           source: './src'
-          exclude: './src/mio ./src/xxhash ./src/zstr'
+          exclude: './src/third-party'
           extensions: 'h,c,cpp,hpp'
           clangFormatVersion: 12
